--- a/lr-main/templates/template1.ejs
+++ b/lr-main/templates/template1.ejs
@@ -1,6 +1,6 @@
 
 <p style='margin-top:.2pt;margin-right:0in;margin-bottom:0in;margin-left:0in;font-size:15px;font-family:"Times New Roman",serif;'><span style="font-size:1px;">&nbsp;</span></p>
-<table style="margin-left: 8.35pt;border-collapse: collapse;border: none;width: 714px;">
+<table style="margin-left: 8.35pt;border-collapse: collapse;border: none;">
     <tbody>
         <tr>
             <td colspan="2" style="width: 2.2in; border-top: 2.25pt double black; border-left: 2.25pt double black; border-bottom: 1pt dotted black; border-right: none; padding: 0in; height: 69pt; vertical-align: top; background-color: rgb(192, 192, 192);">
