--- a/lr-main/templates/template4.ejs
+++ b/lr-main/templates/template4.ejs
@@ -65,9 +65,9 @@
     </div>
     <!-- Header -->
     <div class="top-row">
-      <div class="left-logo">
-        <img src="https://i.ibb.co/bgn7bzWr/maruti-logo.jpg" alt="Maruti Logo" style="max-width:100%; height:auto;">
-      </div>
+  <div class="left-logo">
+  <img src="<%= logoPath %>" alt="Logo" style="max-width:150px; height:auto;">
+</div>
       <div class="center-title">
         <h1>SHRI MARUTI TRANSPORT COMPANY</h1>
         <div class="addr">78 SHIVAJI COMPLEX 414 SENAPATI BAPAT MARG LOWER PAREL MUMBAI</div>
