--- a/lr-main/templates/template4.ejs
+++ b/lr-main/templates/template4.ejs
@@ -66,7 +66,7 @@
     <!-- Header -->
     <div class="top-row">
   <div class="left-logo">
-  <img src="<%= logoPath %>" alt="Logo" style="max-width:150px; height:auto;">
+  <img src="<%= logoPath %>" alt="Logo" style="style="max-width:100%; height:auto;">
 </div>
       <div class="center-title">
         <h1>SHRI MARUTI TRANSPORT COMPANY</h1>
